tests/neg/semantic_strlen_null_bad_type.baa
// EXPECT: نوع المعامل 1 في 'طول_نص' غير متوافق

صحيح الرئيسية() {
    صحيح ن = طول_نص(عدم).
    إرجع ن.
}
